# instant_messenger

./: .gitignore  2  API.txt  CMakeLists.txt  Makefile  Mane  README.md  SUGGESTIONS.txt  \  account.cpp  account.hpp  api.txt  build.sh  client  client.c  client.cpp  client_inet.cpp  client_main.cpp  client_send.cpp  con_porc.cpp  connection.cpp  connection.hpp  connectionAndUser.cpp  connectionAndUser.hpp  connectionUser.cpp  connectionUser.h  connectionUser.hpp  documentation.txt  dom.cpp  echoserver.cpp  echoserver.hpp  echoserver.pro  function_client.hpp  getGroupConv.cpp  getGroupInfo.cpp  getUinfo.cpp  headers.hpp  headers_porc.hpp  input.cpp  isvalid.cpp  (+48 more)
Application/: About_us.qml  Change_Password.qml  Conversation.qml  Database.js  DelegateList.qml  Edit_Profile.qml  Forgot_Password.qml  Help_Center.qml  Home.qml  HomePage.qml  MafClub.pro  MafClub.pro.user.e27e7b1.20  Message.qml  MyProfile.qml  Page1APP.pro  Request_response.js  Search.qml  Sign_in.qml  Sign_up.qml  Terms.qml  Terms1.qml  ToolBarQml.qml  Users_profile.qml  authorization.cpp  authorization.h  backend.cpp  backend.h  main.cpp  main.qml  mainnn.qml  page1.cpp  page1.h  page1.ui  page2.cpp  page2.cpp.autosave  page2.h  page2.ui  qml.qrc  resource.qrc  sign_in.cpp  (+3 more)
Documentation/: Documentation.odp  Documentation.pptx
config/: configFile.txt
db_files/conversations/: u100000u100001.xml  u100000u100002.xml  u100000u100003.xml  u100000u100006.xml  u100001u100002.xml  u100001u100003.xml  u100002u100003.xml  u100002u100004.xml  u100002u100007.xml  u100003u100005.xml  u100003u100006.xml  u100003u100007.xml  u100004u100001.xml  u100004u100006.xml  u100005u100002.xml  u100008u100005.xml
db_files/groups/: groups.xml
db_files/groups/2/: ginfo.xml
db_files/groups/2/messages/: messages.xml
db_files/groups/2/messages/4/: message2.xml
db_files/groups/g1/: .ginfo.xml.swp  conv.xml  ginfo.xml  users.xml
db_files/groups/g10001/: conv.xml  ginfo.xml  users.xml
db_files/register/logins/Heriq93/: Her1993  Her1993.txt
db_files/register/logins/NarekYan/: Narek2002  Narek2002.txt
db_files/register/logins/Valodik/: Valod95  Valod95.txt
db_files/register/logins/test1/: creds.txt
db_files/users/: users.xml
db_files/users/1/: uinfo.xml
db_files/users/1/messages/: messages.xml
db_files/users/1/messages/2/: message.xml
db_files/users/u1/: info.xml
db_files/users/u100000/: .info.xml.swp  info.xml
db_files/users/u100000/convs/: conv_list_u100000.xml  convs_list.xml  u100001
db_files/users/u100001/: .info.xml.swp  info.xml
db_files/users/u100001/convs/: conv_list_u100001.xml  convs_list.xml  u100002
db_files/users/u100002/: info.xml
db_files/users/u100002/convs/: conv_list_u100002.xml  convs_list.xml  u100001  u100005  u100007
db_files/users/u100003/convs/: conv_list_u100003.xml  convs_list.xml  u100000  u100001  u100002  u100005  u100007
db_files/users/u100004/convs/: conv_list_u100004.xml  convs_list.xml  u100001  u100002
db_files/users/u100005/convs/: conv_list_u100005.xml  convs_list.xml  u100008
db_files/users/u100006/convs/: conv_list_u100006.xml  convs_list.xml  u100000  u100003  u100004
db_files/users/u100007/convs/: conv_list_u100007.xml
db_files/users/u100008/convs/: convs_list.xml
db_src/: IDgenerator.cpp  Makefile  build.sh  database.hpp  fileManager.cpp  helpers.cpp  main.cpp  ok.cpp  registration.cpp  result  xmlDatabase.cpp  xmlDatabase.hpp
db_tests/: Makefile  main.cpp  xml
db_tests/xmls/: createGroup1.xml  createGroup2.xml  info.xml  register1.xml  register2.xml
exceptions/: general_exceptions.hpp
headers/: IDgenerator.hpp  database.hpp  fileManager.hpp  helpers.hpp  xmlDatabase.hpp
parser/: a.xml  build.sh  parse.c
parsers/: Makefile  checksum.cpp  input.xml  parse.c  parse.h
probes/: API.txt  parser.cpp
project/: function_server.cpp  function_server.hpp  main_server.cpp
project/manch/: pass.txt
project/mane/: pass.txt
registr_login/: connection.cpp  connection.hpp  function_client.cpp  function_server.cpp  isvalid.cpp  main_client.cpp  user.cpp  user.hpp  x  y
scripts/: install_dependencies.sh  mongo.sh  packages.txt  service_contoller.sh  uninstall.sh
services/include/account/: account.hpp
services/include/base/: basic_controller.hpp  controller.hpp
services/include/dbservice/: database.hpp  dbservice.hpp  mongoDb.hpp
services/include/executor/: executor.hpp
services/include/messaging/: messaging.hpp  messagingDbBase.hpp  messagingMongoDb.hpp
services/include/notification/: mongoDB.hpp  notDB.hpp  notification.hpp  notificationDB.cpp  notificationDB.hpp
services/include/router/: router.hpp
services/include/search/: cashdatabase.hpp  mongocash.hpp  search.hpp
services/include/tokenDbService/: mongoTokenDb.hpp  tokenDatabase.hpp  tokenDbService.hpp
services/src/account/: account.cpp  main.cpp
services/src/base/: basic_controller.cpp
services/src/dbservice/: dbService.cpp  dbservice.cpp  main.cpp  mongoDb.cpp
services/src/executor/: executor.cpp  main.cpp
services/src/messaging/: echoserver.cpp  main.cpp  messaging.cpp  messagingMongoDb.cpp
services/src/notification/: main.cpp  monogoDB.cpp  notification.cpp
services/src/porc/: porc.cpp
services/src/router/: main.cpp  router.cpp
services/src/search/: main.cpp  mongocash.cpp  search.cpp
services/src/tokenDbService/: main.cpp  mongoTokenDb.cpp  tokenDbService.cpp
utilities/: network_utils.cpp  network_utils.hpp
utilities/src/: time.cpp
utilities/validation/: user.json  user_schema.json
xmlToTree/: a.xml  b.xml  parse.c
